# stocknews

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  Makefile  README.md  build.rs  codecov.yaml  deny.toml  docker-compose.yml  go.mod  go.sum  podman-compose.yml  pyproject.toml  renovate.json  run_bot.py  sp1500_stocks.json  tox.ini
.claude/: CLAUDE.md  settings.local.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  main.yml
cmd/stocknews/: main.go  main_test.go
internal/alpaca/: model.go  stream.go  stream_test.go
internal/analyst/: analyst.go  analyst_test.go
internal/config/: config.go  config_test.go
internal/discord/: payload.go  payload_test.go  send.go  send_test.go
internal/earnings/: earnings.go  earnings_test.go
internal/news/: news.go  news_test.go
internal/runtime/: runtime.go  runtime_test.go
src/: alpaca.rs  analyst.rs  config.rs  discord.rs  earnings.rs  lib.rs  main.rs  news.rs
src/stocknews/: __init__.py  analyst.py  config.py  logging_config.py  news_realtime.py  notify.py  utils.py
stocknews/: __init__.py  analyst.py  config.py  dump_cache.py  news.py  news_realtime.py  notify.py  ticker_allowlist.txt  utils.py
tests/: test_analyst.py  test_news.py  test_news_realtime.py  test_utils.py
tools/coveragecheck/: main.go  main_test.go
