[package]
name = "stocknews"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
description = "Alpaca stock news bot for Discord"
repository = "https://github.com/major/stocknews"

[dependencies]
futures-util = "0.3"
html-escape = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "panic", "tracing", "reqwest", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
