[project]
name = "stocknews"
version = "0.0.1"
description = "Deliver stock news to Discord"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
repository = "https://github.com/major/stocknews"
documentation = "https://major.github.io/stocknews/"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-webhook (>=1.3.1,<2.0.0)",
    "httpx-ws (>=0.7.2,<0.8.0)",
    "mastodon-py (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "sentry-sdk[httpx] (>=2.26.1,<3.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
]

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
fakeredis = "^2.27.0"
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.16.0"
pytest-sugar = "^1.0.0"
ruff = "^0.11.0"
tox = "^4.24.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
env = ["FORCE_COLOR=1"]
addopts = [
    "--cov=stocknews",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]


[tool.mypy]
files = ["stocknews"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "discord_webhook"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon"
ignore_missing_imports = true

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[project.scripts]
update_sp1500 = 'stocknews.utils:update_sp1500_stocks'
