[project]
name = "stocknews"
version = "0.0.1"
description = "Deliver stock news to Discord"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
repository = "https://github.com/major/stocknews"
documentation = "https://major.github.io/stocknews/"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-webhook (>=1.4.1,<2.0.0)",
    "httpx-ws (>=0.7.2,<0.8.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "mastodon-py (>=2.0.1,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "sentry-sdk[httpx] (>=2.32.0,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
]

[tool.poetry.group.dev.dependencies]
deptry = "0.23.0"
fakeredis = "2.30.1"
mypy = "1.17.0"
pre-commit = "4.2.0"
pytest = "8.4.1"
pytest-asyncio = "1.0.0"
pytest-cov = "6.2.1"
pytest-randomly = "3.16.0"
pytest-sugar = "1.0.0"
ruff = "0.12.3"
tox = "4.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
env = ["FORCE_COLOR=1"]
addopts = [
    "--cov=stocknews",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]


[tool.mypy]
files = ["stocknews"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "discord_webhook"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon"
ignore_missing_imports = true

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true

[project.scripts]
update_sp1500 = 'stocknews.utils:update_sp1500_stocks'
