[project]
name = "stocknews"
version = "0.1.0"
description = "Get stock news, analyst ratings, and earnings reports from Alpaca."
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "discord-webhook>=1.4.1",
    "httpx-ws>=0.7.2",
    "lxml>=6.0.0",
    "mastodon-py>=2.0.1",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "sentry-sdk[httpx]>=2.33.2",
    "structlog>=25.4.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.12.5",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--cov=stocknews",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--verbose",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
